--- a/SYSDEPS/Makefile
+++ b/SYSDEPS/Makefile
@@ -1,283 +1,13 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_aio-mech sd_ch_flags sd_corelib-flags sd_corelib-libs-S sd_corelib-libs sd_direntry sd_dlopen sd_int32 sd_fd sd_floatcast sd_cpuinfo sd_fltk11-flags sd_fltk11-libs-S sd_fltk11-libs sd_fltk2-flags sd_fltk2-libs-S sd_fltk2-libs sd_float32 sd_jack-flags sd_jack-libs sd_opengl-flags sd_opengl-libs sd_png-flags sd_png-libs sd_sdl-flags sd_sdl-image-flags sd_sdl-image-libs sd_sdl-libs sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_select sd_signal sd_sndfile-flags sd_sndfile-libs sd_systype sd_x86cpuid sd_io_poll-flags sd_io_poll-libs-S sd_pdcgi-flags sd_pdcgi-libs-S sd_byteorder sd_int64 sd_uint16 sd_int16 sd_uint32 sd_uint64 sd_float64 sd_portaudio-flags sd_portaudio-libs sd_fastcgi-flags sd_fastcgi-libs sd_tiff-libs sd_tiff-flags
-sysdeps_clean:  sd_aio-mech_clean sd_ch_flags_clean sd_corelib-flags_clean sd_corelib-libs-S_clean sd_corelib-libs_clean sd_direntry_clean sd_dlopen_clean sd_int32_clean sd_fd_clean sd_floatcast_clean sd_cpuinfo_clean sd_fltk11-flags_clean sd_fltk11-libs-S_clean sd_fltk11-libs_clean sd_fltk2-flags_clean sd_fltk2-libs-S_clean sd_fltk2-libs_clean sd_float32_clean sd_jack-flags_clean sd_jack-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_png-flags_clean sd_png-libs_clean sd_sdl-flags_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_sdl-libs_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_select_clean sd_signal_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_systype_clean sd_x86cpuid_clean sd_io_poll-flags_clean sd_io_poll-libs-S_clean sd_pdcgi-flags_clean sd_pdcgi-libs-S_clean sd_byteorder_clean sd_int64_clean sd_uint16_clean sd_int16_clean sd_uint32_clean sd_uint64_clean sd_float64_clean sd_portaudio-flags_clean sd_portaudio-libs_clean sd_fastcgi-flags_clean sd_fastcgi-libs_clean sd_tiff-libs_clean sd_tiff-flags_clean
-
-sd_aio-mech:
-	@(cd aio-mech && ./run)
-sd_aio-mech_clean:
-	@(cd aio-mech && ./clean)
-
-sd_ch_flags:
-	@(cd ch_flags && ./run)
-sd_ch_flags_clean:
-	@(cd ch_flags && ./clean)
+sysdeps:  sd_corelib-flags
+sysdeps_clean:  sd_corelib-flags_clean
 
 sd_corelib-flags:
-	@(cd corelib-flags && ./run)
+	@(cd modules/corelib-flags && ./run)
 sd_corelib-flags_clean:
-	@(cd corelib-flags && ./clean)
-
-sd_corelib-libs-S:
-	@(cd corelib-libs-S && ./run)
-sd_corelib-libs-S_clean:
-	@(cd corelib-libs-S && ./clean)
-
-sd_corelib-libs:
-	@(cd corelib-libs && ./run)
-sd_corelib-libs_clean:
-	@(cd corelib-libs && ./clean)
-
-sd_direntry:
-	@(cd direntry && ./run)
-sd_direntry_clean:
-	@(cd direntry && ./clean)
-
-sd_dlopen:
-	@(cd dlopen && ./run)
-sd_dlopen_clean:
-	@(cd dlopen && ./clean)
-
-sd_int32:
-	@(cd int32 && ./run)
-sd_int32_clean:
-	@(cd int32 && ./clean)
-
-sd_fd:
-	@(cd fd && ./run)
-sd_fd_clean:
-	@(cd fd && ./clean)
-
-sd_floatcast:
-	@(cd floatcast && ./run)
-sd_floatcast_clean:
-	@(cd floatcast && ./clean)
-
-sd_cpuinfo:
-	@(cd cpuinfo && ./run)
-sd_cpuinfo_clean:
-	@(cd cpuinfo && ./clean)
-
-sd_fltk11-flags:
-	@(cd fltk11-flags && ./run)
-sd_fltk11-flags_clean:
-	@(cd fltk11-flags && ./clean)
-
-sd_fltk11-libs-S:
-	@(cd fltk11-libs-S && ./run)
-sd_fltk11-libs-S_clean:
-	@(cd fltk11-libs-S && ./clean)
-
-sd_fltk11-libs:
-	@(cd fltk11-libs && ./run)
-sd_fltk11-libs_clean:
-	@(cd fltk11-libs && ./clean)
-
-sd_fltk2-flags:
-	@(cd fltk2-flags && ./run)
-sd_fltk2-flags_clean:
-	@(cd fltk2-flags && ./clean)
-
-sd_fltk2-libs-S:
-	@(cd fltk2-libs-S && ./run)
-sd_fltk2-libs-S_clean:
-	@(cd fltk2-libs-S && ./clean)
-
-sd_fltk2-libs:
-	@(cd fltk2-libs && ./run)
-sd_fltk2-libs_clean:
-	@(cd fltk2-libs && ./clean)
-
-sd_float32:
-	@(cd float32 && ./run)
-sd_float32_clean:
-	@(cd float32 && ./clean)
-
-sd_jack-flags:
-	@(cd jack-flags && ./run)
-sd_jack-flags_clean:
-	@(cd jack-flags && ./clean)
-
-sd_jack-libs:
-	@(cd jack-libs && ./run)
-sd_jack-libs_clean:
-	@(cd jack-libs && ./clean)
-
-sd_opengl-flags:
-	@(cd opengl-flags && ./run)
-sd_opengl-flags_clean:
-	@(cd opengl-flags && ./clean)
-
-sd_opengl-libs:
-	@(cd opengl-libs && ./run)
-sd_opengl-libs_clean:
-	@(cd opengl-libs && ./clean)
-
-sd_png-flags:
-	@(cd png-flags && ./run)
-sd_png-flags_clean:
-	@(cd png-flags && ./clean)
-
-sd_png-libs:
-	@(cd png-libs && ./run)
-sd_png-libs_clean:
-	@(cd png-libs && ./clean)
-
-sd_sdl-flags:
-	@(cd sdl-flags && ./run)
-sd_sdl-flags_clean:
-	@(cd sdl-flags && ./clean)
-
-sd_sdl-image-flags:
-	@(cd sdl-image-flags && ./run)
-sd_sdl-image-flags_clean:
-	@(cd sdl-image-flags && ./clean)
-
-sd_sdl-image-libs:
-	@(cd sdl-image-libs && ./run)
-sd_sdl-image-libs_clean:
-	@(cd sdl-image-libs && ./clean)
-
-sd_sdl-libs:
-	@(cd sdl-libs && ./run)
-sd_sdl-libs_clean:
-	@(cd sdl-libs && ./clean)
-
-sd_sdl-mixer-flags:
-	@(cd sdl-mixer-flags && ./run)
-sd_sdl-mixer-flags_clean:
-	@(cd sdl-mixer-flags && ./clean)
-
-sd_sdl-mixer-libs:
-	@(cd sdl-mixer-libs && ./run)
-sd_sdl-mixer-libs_clean:
-	@(cd sdl-mixer-libs && ./clean)
-
-sd_sdl-ttf-flags:
-	@(cd sdl-ttf-flags && ./run)
-sd_sdl-ttf-flags_clean:
-	@(cd sdl-ttf-flags && ./clean)
-
-sd_sdl-ttf-libs:
-	@(cd sdl-ttf-libs && ./run)
-sd_sdl-ttf-libs_clean:
-	@(cd sdl-ttf-libs && ./clean)
-
-sd_select:
-	@(cd select && ./run)
-sd_select_clean:
-	@(cd select && ./clean)
-
-sd_signal:
-	@(cd signal && ./run)
-sd_signal_clean:
-	@(cd signal && ./clean)
-
-sd_sndfile-flags:
-	@(cd sndfile-flags && ./run)
-sd_sndfile-flags_clean:
-	@(cd sndfile-flags && ./clean)
-
-sd_sndfile-libs:
-	@(cd sndfile-libs && ./run)
-sd_sndfile-libs_clean:
-	@(cd sndfile-libs && ./clean)
-
-sd_systype:
-	@(cd systype && ./run)
-sd_systype_clean:
-	@(cd systype && ./clean)
-
-sd_x86cpuid:
-	@(cd x86cpuid && ./run)
-sd_x86cpuid_clean:
-	@(cd x86cpuid && ./clean)
-
-sd_io_poll-flags:
-	@(cd io_poll-flags && ./run)
-sd_io_poll-flags_clean:
-	@(cd io_poll-flags && ./clean)
-
-sd_io_poll-libs-S:
-	@(cd io_poll-libs-S && ./run)
-sd_io_poll-libs-S_clean:
-	@(cd io_poll-libs-S && ./clean)
-
-sd_pdcgi-flags:
-	@(cd pdcgi-flags && ./run)
-sd_pdcgi-flags_clean:
-	@(cd pdcgi-flags && ./clean)
-
-sd_pdcgi-libs-S:
-	@(cd pdcgi-libs-S && ./run)
-sd_pdcgi-libs-S_clean:
-	@(cd pdcgi-libs-S && ./clean)
-
-sd_byteorder:
-	@(cd byteorder && ./run)
-sd_byteorder_clean:
-	@(cd byteorder && ./clean)
-
-sd_int64:
-	@(cd int64 && ./run)
-sd_int64_clean:
-	@(cd int64 && ./clean)
-
-sd_uint16:
-	@(cd uint16 && ./run)
-sd_uint16_clean:
-	@(cd uint16 && ./clean)
-
-sd_int16:
-	@(cd int16 && ./run)
-sd_int16_clean:
-	@(cd int16 && ./clean)
-
-sd_uint32:
-	@(cd uint32 && ./run)
-sd_uint32_clean:
-	@(cd uint32 && ./clean)
-
-sd_uint64:
-	@(cd uint64 && ./run)
-sd_uint64_clean:
-	@(cd uint64 && ./clean)
-
-sd_float64:
-	@(cd float64 && ./run)
-sd_float64_clean:
-	@(cd float64 && ./clean)
-
-sd_portaudio-flags:
-	@(cd portaudio-flags && ./run)
-sd_portaudio-flags_clean:
-	@(cd portaudio-flags && ./clean)
-
-sd_portaudio-libs:
-	@(cd portaudio-libs && ./run)
-sd_portaudio-libs_clean:
-	@(cd portaudio-libs && ./clean)
-
-sd_fastcgi-flags:
-	@(cd fastcgi-flags && ./run)
-sd_fastcgi-flags_clean:
-	@(cd fastcgi-flags && ./clean)
-
-sd_fastcgi-libs:
-	@(cd fastcgi-libs && ./run)
-sd_fastcgi-libs_clean:
-	@(cd fastcgi-libs && ./clean)
-
-sd_tiff-libs:
-	@(cd tiff-libs && ./run)
-sd_tiff-libs_clean:
-	@(cd tiff-libs && ./clean)
-
-sd_tiff-flags:
-	@(cd tiff-flags && ./run)
-sd_tiff-flags_clean:
-	@(cd tiff-flags && ./clean)
+	@(cd modules/corelib-flags && ./clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
