--- a/SYSDEPS/Makefile
+++ b/SYSDEPS/Makefile
@@ -1,8 +1,8 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_corelib-flags sd_corelib-libs sd_corelib-libs-S sd_io_poll-flags sd_io_poll-libs-S sd_pdcgi-flags sd_pdcgi-libs-S sd_aio-mech sd_ch_flags sd_byteorder sd_direntry sd_dlopen sd_fastcgi-flags sd_fastcgi-libs sd_float32 sd_float64 sd_uint16 sd_uint32 sd_uint64 sd_int16 sd_int32 sd_int64 sd_fd sd_floatcast sd_select sd_signal sd_fltk11-flags sd_fltk11-libs sd_fltk11-libs-S sd_fltk2-libs-S sd_fltk2-libs sd_fltk2-flags sd_jack-flags sd_jack-libs sd_opengl-flags sd_opengl-libs sd_png-flags sd_png-libs sd_portaudio-flags sd_portaudio-libs sd_tiff-flags sd_tiff-libs sd_sndfile-flags sd_sndfile-libs sd_sdl-flags sd_sdl-libs sd_sdl-image-flags sd_sdl-image-libs sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_sysinfo
-sysdeps_clean:  sd_corelib-flags_clean sd_corelib-libs_clean sd_corelib-libs-S_clean sd_io_poll-flags_clean sd_io_poll-libs-S_clean sd_pdcgi-flags_clean sd_pdcgi-libs-S_clean sd_aio-mech_clean sd_ch_flags_clean sd_byteorder_clean sd_direntry_clean sd_dlopen_clean sd_fastcgi-flags_clean sd_fastcgi-libs_clean sd_float32_clean sd_float64_clean sd_uint16_clean sd_uint32_clean sd_uint64_clean sd_int16_clean sd_int32_clean sd_int64_clean sd_fd_clean sd_floatcast_clean sd_select_clean sd_signal_clean sd_fltk11-flags_clean sd_fltk11-libs_clean sd_fltk11-libs-S_clean sd_fltk2-libs-S_clean sd_fltk2-libs_clean sd_fltk2-flags_clean sd_jack-flags_clean sd_jack-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_png-flags_clean sd_png-libs_clean sd_portaudio-flags_clean sd_portaudio-libs_clean sd_tiff-flags_clean sd_tiff-libs_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_sdl-flags_clean sd_sdl-libs_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_sysinfo_clean
+sysdeps:  sd_corelib-flags sd_corelib-libs sd_corelib-libs-S sd_io_poll-flags sd_io_poll-libs-S sd_pdcgi-flags sd_pdcgi-libs-S sd_aio-mech sd_ch_flags sd_byteorder sd_direntry sd_dlopen sd_fastcgi-flags sd_fastcgi-libs sd_float32 sd_float64 sd_uint16 sd_uint32 sd_uint64 sd_int16 sd_int32 sd_int64 sd_fd sd_floatcast sd_select sd_signal sd_fltk11-flags sd_fltk11-libs sd_fltk11-libs-S sd_fltk2-libs-S sd_fltk2-libs sd_fltk2-flags sd_jack-flags sd_jack-libs sd_opengl-flags sd_opengl-libs sd_png-flags sd_png-libs sd_portaudio-flags sd_portaudio-libs sd_tiff-flags sd_tiff-libs sd_sndfile-flags sd_sndfile-libs sd_sdl-flags sd_sdl-libs sd_sdl-image-flags sd_sdl-image-libs sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_sysinfo sd_sse-flags sd_sse2-flags sd_sse3-flags sd_altivec-flags
+sysdeps_clean:  sd_corelib-flags_clean sd_corelib-libs_clean sd_corelib-libs-S_clean sd_io_poll-flags_clean sd_io_poll-libs-S_clean sd_pdcgi-flags_clean sd_pdcgi-libs-S_clean sd_aio-mech_clean sd_ch_flags_clean sd_byteorder_clean sd_direntry_clean sd_dlopen_clean sd_fastcgi-flags_clean sd_fastcgi-libs_clean sd_float32_clean sd_float64_clean sd_uint16_clean sd_uint32_clean sd_uint64_clean sd_int16_clean sd_int32_clean sd_int64_clean sd_fd_clean sd_floatcast_clean sd_select_clean sd_signal_clean sd_fltk11-flags_clean sd_fltk11-libs_clean sd_fltk11-libs-S_clean sd_fltk2-libs-S_clean sd_fltk2-libs_clean sd_fltk2-flags_clean sd_jack-flags_clean sd_jack-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_png-flags_clean sd_png-libs_clean sd_portaudio-flags_clean sd_portaudio-libs_clean sd_tiff-flags_clean sd_tiff-libs_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_sdl-flags_clean sd_sdl-libs_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_sysinfo_clean sd_sse-flags_clean sd_sse2-flags_clean sd_sse3-flags_clean sd_altivec-flags_clean
 
 sd_corelib-flags:
 	@(cd modules/corelib-flags && ./run)
@@ -268,6 +268,26 @@ sd_sysinfo:
 	@(cd modules/sysinfo && ./run)
 sd_sysinfo_clean:
 	@(cd modules/sysinfo && ./clean)
+
+sd_sse-flags:
+	@(cd modules/sse-flags && ./run)
+sd_sse-flags_clean:
+	@(cd modules/sse-flags && ./clean)
+
+sd_sse2-flags:
+	@(cd modules/sse2-flags && ./run)
+sd_sse2-flags_clean:
+	@(cd modules/sse2-flags && ./clean)
+
+sd_sse3-flags:
+	@(cd modules/sse3-flags && ./run)
+sd_sse3-flags_clean:
+	@(cd modules/sse3-flags && ./clean)
+
+sd_altivec-flags:
+	@(cd modules/altivec-flags && ./run)
+sd_altivec-flags_clean:
+	@(cd modules/altivec-flags && ./clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
