--- a/SYSDEPS/Makefile
+++ b/SYSDEPS/Makefile
@@ -1,53 +1,183 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_corelib-flags sd_corelib-libs sd_corelib-libs-S sd_io_poll-flags sd_io_poll-libs-S sd_pdcgi-flags sd_pdcgi-libs-S sd_aio-mech sd_ch_flags sd_byteorder sd_direntry sd_dlopen sd_fastcgi-flags sd_fastcgi-libs sd_float32 sd_float64 sd_uint16 sd_uint32 sd_uint64 sd_int16 sd_int32 sd_int64 sd_fd sd_floatcast sd_select sd_signal sd_fltk11-flags sd_fltk11-libs sd_fltk11-libs-S sd_fltk2-libs-S sd_fltk2-libs sd_fltk2-flags sd_jack-flags sd_jack-libs sd_opengl-flags sd_opengl-libs sd_png-flags sd_png-libs sd_portaudio-flags sd_portaudio-libs sd_tiff-flags sd_tiff-libs sd_sndfile-flags sd_sndfile-libs sd_sdl-flags sd_sdl-libs sd_sdl-image-flags sd_sdl-image-libs sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_sysinfo sd_sse-flags sd_sse2-flags sd_sse3-flags sd_altivec-flags sd_fcntl
-sysdeps_clean:  sd_corelib-flags_clean sd_corelib-libs_clean sd_corelib-libs-S_clean sd_io_poll-flags_clean sd_io_poll-libs-S_clean sd_pdcgi-flags_clean sd_pdcgi-libs-S_clean sd_aio-mech_clean sd_ch_flags_clean sd_byteorder_clean sd_direntry_clean sd_dlopen_clean sd_fastcgi-flags_clean sd_fastcgi-libs_clean sd_float32_clean sd_float64_clean sd_uint16_clean sd_uint32_clean sd_uint64_clean sd_int16_clean sd_int32_clean sd_int64_clean sd_fd_clean sd_floatcast_clean sd_select_clean sd_signal_clean sd_fltk11-flags_clean sd_fltk11-libs_clean sd_fltk11-libs-S_clean sd_fltk2-libs-S_clean sd_fltk2-libs_clean sd_fltk2-flags_clean sd_jack-flags_clean sd_jack-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_png-flags_clean sd_png-libs_clean sd_portaudio-flags_clean sd_portaudio-libs_clean sd_tiff-flags_clean sd_tiff-libs_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_sdl-flags_clean sd_sdl-libs_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_sysinfo_clean sd_sse-flags_clean sd_sse2-flags_clean sd_sse3-flags_clean sd_altivec-flags_clean sd_fcntl_clean
-
-sd_corelib-flags:
-	@(cd modules/corelib-flags && ./run)
-sd_corelib-flags_clean:
-	@(cd modules/corelib-flags && ./clean)
-
-sd_corelib-libs:
-	@(cd modules/corelib-libs && ./run)
-sd_corelib-libs_clean:
-	@(cd modules/corelib-libs && ./clean)
-
-sd_corelib-libs-S:
-	@(cd modules/corelib-libs-S && ./run)
-sd_corelib-libs-S_clean:
-	@(cd modules/corelib-libs-S && ./clean)
-
-sd_io_poll-flags:
-	@(cd modules/io_poll-flags && ./run)
-sd_io_poll-flags_clean:
-	@(cd modules/io_poll-flags && ./clean)
-
-sd_io_poll-libs-S:
-	@(cd modules/io_poll-libs-S && ./run)
-sd_io_poll-libs-S_clean:
-	@(cd modules/io_poll-libs-S && ./clean)
-
-sd_pdcgi-flags:
-	@(cd modules/pdcgi-flags && ./run)
-sd_pdcgi-flags_clean:
-	@(cd modules/pdcgi-flags && ./clean)
-
-sd_pdcgi-libs-S:
-	@(cd modules/pdcgi-libs-S && ./run)
-sd_pdcgi-libs-S_clean:
-	@(cd modules/pdcgi-libs-S && ./clean)
+sysdeps:  sd_aio-mech sd_io_poll-libs-S sd_io_poll-flags sd_fltk11-libs-S sd_sdl-image-libs sd_uint64 sd_sysinfo sd_sdl-image-flags sd_int32 sd_int16 sd_ch_flags sd_corelib-libs sd_fastcgi-libs sd_sdl-ttf-flags sd_fltk2-libs-S sd_fastcgi-flags sd_opengl-libs sd_sndfile-libs sd_opengl-flags sd_sndfile-flags sd_float64 sd_tiff-libs sd_pdcgi-flags sd_floatcast sd_altivec-flags sd_tiff-flags sd_sse-flags sd_uint32 sd_uint16 sd_fltk11-libs sd_sdl-mixer-libs sd_fltk11-flags sd_portaudio-libs sd_sdl-mixer-flags sd_jack-libs sd_byteorder sd_direntry sd_portaudio-flags sd_jack-flags sd_int64 sd_sdl-ttf-libs sd_corelib-libs-S sd_float32 sd_sse2-flags sd_sse3-flags sd_fltk2-libs sd_corelib-flags sd_sdl-libs sd_png-libs sd_fltk2-flags sd_sdl-flags sd_pdcgi-libs-S sd_png-flags sd_sd-fcntl sd_sd-dlopen sd_sd-fd sd_sd-select sd_sd-signal
+sysdeps_clean:  sd_aio-mech_clean sd_io_poll-libs-S_clean sd_io_poll-flags_clean sd_fltk11-libs-S_clean sd_sdl-image-libs_clean sd_uint64_clean sd_sysinfo_clean sd_sdl-image-flags_clean sd_int32_clean sd_int16_clean sd_ch_flags_clean sd_corelib-libs_clean sd_fastcgi-libs_clean sd_sdl-ttf-flags_clean sd_fltk2-libs-S_clean sd_fastcgi-flags_clean sd_opengl-libs_clean sd_sndfile-libs_clean sd_opengl-flags_clean sd_sndfile-flags_clean sd_float64_clean sd_tiff-libs_clean sd_pdcgi-flags_clean sd_floatcast_clean sd_altivec-flags_clean sd_tiff-flags_clean sd_sse-flags_clean sd_uint32_clean sd_uint16_clean sd_fltk11-libs_clean sd_sdl-mixer-libs_clean sd_fltk11-flags_clean sd_portaudio-libs_clean sd_sdl-mixer-flags_clean sd_jack-libs_clean sd_byteorder_clean sd_direntry_clean sd_portaudio-flags_clean sd_jack-flags_clean sd_int64_clean sd_sdl-ttf-libs_clean sd_corelib-libs-S_clean sd_float32_clean sd_sse2-flags_clean sd_sse3-flags_clean sd_fltk2-libs_clean sd_corelib-flags_clean sd_sdl-libs_clean sd_png-libs_clean sd_fltk2-flags_clean sd_sdl-flags_clean sd_pdcgi-libs-S_clean sd_png-flags_clean sd_sd-fcntl_clean sd_sd-dlopen_clean sd_sd-fd_clean sd_sd-select_clean sd_sd-signal_clean
 
 sd_aio-mech:
 	@(cd modules/aio-mech && ./run)
 sd_aio-mech_clean:
 	@(cd modules/aio-mech && ./clean)
 
+sd_io_poll-libs-S:
+	@(cd modules/io_poll-libs-S && ./run)
+sd_io_poll-libs-S_clean:
+	@(cd modules/io_poll-libs-S && ./clean)
+
+sd_io_poll-flags:
+	@(cd modules/io_poll-flags && ./run)
+sd_io_poll-flags_clean:
+	@(cd modules/io_poll-flags && ./clean)
+
+sd_fltk11-libs-S:
+	@(cd modules/fltk11-libs-S && ./run)
+sd_fltk11-libs-S_clean:
+	@(cd modules/fltk11-libs-S && ./clean)
+
+sd_sdl-image-libs:
+	@(cd modules/sdl-image-libs && ./run)
+sd_sdl-image-libs_clean:
+	@(cd modules/sdl-image-libs && ./clean)
+
+sd_uint64:
+	@(cd modules/uint64 && ./run)
+sd_uint64_clean:
+	@(cd modules/uint64 && ./clean)
+
+sd_sysinfo:
+	@(cd modules/sysinfo && ./run)
+sd_sysinfo_clean:
+	@(cd modules/sysinfo && ./clean)
+
+sd_sdl-image-flags:
+	@(cd modules/sdl-image-flags && ./run)
+sd_sdl-image-flags_clean:
+	@(cd modules/sdl-image-flags && ./clean)
+
+sd_int32:
+	@(cd modules/int32 && ./run)
+sd_int32_clean:
+	@(cd modules/int32 && ./clean)
+
+sd_int16:
+	@(cd modules/int16 && ./run)
+sd_int16_clean:
+	@(cd modules/int16 && ./clean)
+
 sd_ch_flags:
 	@(cd modules/ch_flags && ./run)
 sd_ch_flags_clean:
 	@(cd modules/ch_flags && ./clean)
+
+sd_corelib-libs:
+	@(cd modules/corelib-libs && ./run)
+sd_corelib-libs_clean:
+	@(cd modules/corelib-libs && ./clean)
+
+sd_fastcgi-libs:
+	@(cd modules/fastcgi-libs && ./run)
+sd_fastcgi-libs_clean:
+	@(cd modules/fastcgi-libs && ./clean)
+
+sd_sdl-ttf-flags:
+	@(cd modules/sdl-ttf-flags && ./run)
+sd_sdl-ttf-flags_clean:
+	@(cd modules/sdl-ttf-flags && ./clean)
+
+sd_fltk2-libs-S:
+	@(cd modules/fltk2-libs-S && ./run)
+sd_fltk2-libs-S_clean:
+	@(cd modules/fltk2-libs-S && ./clean)
+
+sd_fastcgi-flags:
+	@(cd modules/fastcgi-flags && ./run)
+sd_fastcgi-flags_clean:
+	@(cd modules/fastcgi-flags && ./clean)
+
+sd_opengl-libs:
+	@(cd modules/opengl-libs && ./run)
+sd_opengl-libs_clean:
+	@(cd modules/opengl-libs && ./clean)
+
+sd_sndfile-libs:
+	@(cd modules/sndfile-libs && ./run)
+sd_sndfile-libs_clean:
+	@(cd modules/sndfile-libs && ./clean)
+
+sd_opengl-flags:
+	@(cd modules/opengl-flags && ./run)
+sd_opengl-flags_clean:
+	@(cd modules/opengl-flags && ./clean)
+
+sd_sndfile-flags:
+	@(cd modules/sndfile-flags && ./run)
+sd_sndfile-flags_clean:
+	@(cd modules/sndfile-flags && ./clean)
+
+sd_float64:
+	@(cd modules/float64 && ./run)
+sd_float64_clean:
+	@(cd modules/float64 && ./clean)
+
+sd_tiff-libs:
+	@(cd modules/tiff-libs && ./run)
+sd_tiff-libs_clean:
+	@(cd modules/tiff-libs && ./clean)
+
+sd_pdcgi-flags:
+	@(cd modules/pdcgi-flags && ./run)
+sd_pdcgi-flags_clean:
+	@(cd modules/pdcgi-flags && ./clean)
+
+sd_floatcast:
+	@(cd modules/floatcast && ./run)
+sd_floatcast_clean:
+	@(cd modules/floatcast && ./clean)
+
+sd_altivec-flags:
+	@(cd modules/altivec-flags && ./run)
+sd_altivec-flags_clean:
+	@(cd modules/altivec-flags && ./clean)
+
+sd_tiff-flags:
+	@(cd modules/tiff-flags && ./run)
+sd_tiff-flags_clean:
+	@(cd modules/tiff-flags && ./clean)
+
+sd_sse-flags:
+	@(cd modules/sse-flags && ./run)
+sd_sse-flags_clean:
+	@(cd modules/sse-flags && ./clean)
+
+sd_uint32:
+	@(cd modules/uint32 && ./run)
+sd_uint32_clean:
+	@(cd modules/uint32 && ./clean)
+
+sd_uint16:
+	@(cd modules/uint16 && ./run)
+sd_uint16_clean:
+	@(cd modules/uint16 && ./clean)
+
+sd_fltk11-libs:
+	@(cd modules/fltk11-libs && ./run)
+sd_fltk11-libs_clean:
+	@(cd modules/fltk11-libs && ./clean)
+
+sd_sdl-mixer-libs:
+	@(cd modules/sdl-mixer-libs && ./run)
+sd_sdl-mixer-libs_clean:
+	@(cd modules/sdl-mixer-libs && ./clean)
+
+sd_fltk11-flags:
+	@(cd modules/fltk11-flags && ./run)
+sd_fltk11-flags_clean:
+	@(cd modules/fltk11-flags && ./clean)
+
+sd_portaudio-libs:
+	@(cd modules/portaudio-libs && ./run)
+sd_portaudio-libs_clean:
+	@(cd modules/portaudio-libs && ./clean)
+
+sd_sdl-mixer-flags:
+	@(cd modules/sdl-mixer-flags && ./run)
+sd_sdl-mixer-flags_clean:
+	@(cd modules/sdl-mixer-flags && ./clean)
+
+sd_jack-libs:
+	@(cd modules/jack-libs && ./run)
+sd_jack-libs_clean:
+	@(cd modules/jack-libs && ./clean)
 
 sd_byteorder:
 	@(cd modules/byteorder && ./run)
@@ -59,220 +189,35 @@ sd_direntry:
 sd_direntry_clean:
 	@(cd modules/direntry && ./clean)
 
-sd_dlopen:
-	@(cd modules/dlopen && ./run)
-sd_dlopen_clean:
-	@(cd modules/dlopen && ./clean)
-
-sd_fastcgi-flags:
-	@(cd modules/fastcgi-flags && ./run)
-sd_fastcgi-flags_clean:
-	@(cd modules/fastcgi-flags && ./clean)
-
-sd_fastcgi-libs:
-	@(cd modules/fastcgi-libs && ./run)
-sd_fastcgi-libs_clean:
-	@(cd modules/fastcgi-libs && ./clean)
-
-sd_float32:
-	@(cd modules/float32 && ./run)
-sd_float32_clean:
-	@(cd modules/float32 && ./clean)
-
-sd_float64:
-	@(cd modules/float64 && ./run)
-sd_float64_clean:
-	@(cd modules/float64 && ./clean)
-
-sd_uint16:
-	@(cd modules/uint16 && ./run)
-sd_uint16_clean:
-	@(cd modules/uint16 && ./clean)
-
-sd_uint32:
-	@(cd modules/uint32 && ./run)
-sd_uint32_clean:
-	@(cd modules/uint32 && ./clean)
-
-sd_uint64:
-	@(cd modules/uint64 && ./run)
-sd_uint64_clean:
-	@(cd modules/uint64 && ./clean)
-
-sd_int16:
-	@(cd modules/int16 && ./run)
-sd_int16_clean:
-	@(cd modules/int16 && ./clean)
-
-sd_int32:
-	@(cd modules/int32 && ./run)
-sd_int32_clean:
-	@(cd modules/int32 && ./clean)
-
-sd_int64:
-	@(cd modules/int64 && ./run)
-sd_int64_clean:
-	@(cd modules/int64 && ./clean)
-
-sd_fd:
-	@(cd modules/fd && ./run)
-sd_fd_clean:
-	@(cd modules/fd && ./clean)
-
-sd_floatcast:
-	@(cd modules/floatcast && ./run)
-sd_floatcast_clean:
-	@(cd modules/floatcast && ./clean)
-
-sd_select:
-	@(cd modules/select && ./run)
-sd_select_clean:
-	@(cd modules/select && ./clean)
-
-sd_signal:
-	@(cd modules/signal && ./run)
-sd_signal_clean:
-	@(cd modules/signal && ./clean)
-
-sd_fltk11-flags:
-	@(cd modules/fltk11-flags && ./run)
-sd_fltk11-flags_clean:
-	@(cd modules/fltk11-flags && ./clean)
-
-sd_fltk11-libs:
-	@(cd modules/fltk11-libs && ./run)
-sd_fltk11-libs_clean:
-	@(cd modules/fltk11-libs && ./clean)
-
-sd_fltk11-libs-S:
-	@(cd modules/fltk11-libs-S && ./run)
-sd_fltk11-libs-S_clean:
-	@(cd modules/fltk11-libs-S && ./clean)
-
-sd_fltk2-libs-S:
-	@(cd modules/fltk2-libs-S && ./run)
-sd_fltk2-libs-S_clean:
-	@(cd modules/fltk2-libs-S && ./clean)
-
-sd_fltk2-libs:
-	@(cd modules/fltk2-libs && ./run)
-sd_fltk2-libs_clean:
-	@(cd modules/fltk2-libs && ./clean)
-
-sd_fltk2-flags:
-	@(cd modules/fltk2-flags && ./run)
-sd_fltk2-flags_clean:
-	@(cd modules/fltk2-flags && ./clean)
+sd_portaudio-flags:
+	@(cd modules/portaudio-flags && ./run)
+sd_portaudio-flags_clean:
+	@(cd modules/portaudio-flags && ./clean)
 
 sd_jack-flags:
 	@(cd modules/jack-flags && ./run)
 sd_jack-flags_clean:
 	@(cd modules/jack-flags && ./clean)
 
-sd_jack-libs:
-	@(cd modules/jack-libs && ./run)
-sd_jack-libs_clean:
-	@(cd modules/jack-libs && ./clean)
-
-sd_opengl-flags:
-	@(cd modules/opengl-flags && ./run)
-sd_opengl-flags_clean:
-	@(cd modules/opengl-flags && ./clean)
-
-sd_opengl-libs:
-	@(cd modules/opengl-libs && ./run)
-sd_opengl-libs_clean:
-	@(cd modules/opengl-libs && ./clean)
-
-sd_png-flags:
-	@(cd modules/png-flags && ./run)
-sd_png-flags_clean:
-	@(cd modules/png-flags && ./clean)
-
-sd_png-libs:
-	@(cd modules/png-libs && ./run)
-sd_png-libs_clean:
-	@(cd modules/png-libs && ./clean)
-
-sd_portaudio-flags:
-	@(cd modules/portaudio-flags && ./run)
-sd_portaudio-flags_clean:
-	@(cd modules/portaudio-flags && ./clean)
-
-sd_portaudio-libs:
-	@(cd modules/portaudio-libs && ./run)
-sd_portaudio-libs_clean:
-	@(cd modules/portaudio-libs && ./clean)
-
-sd_tiff-flags:
-	@(cd modules/tiff-flags && ./run)
-sd_tiff-flags_clean:
-	@(cd modules/tiff-flags && ./clean)
-
-sd_tiff-libs:
-	@(cd modules/tiff-libs && ./run)
-sd_tiff-libs_clean:
-	@(cd modules/tiff-libs && ./clean)
-
-sd_sndfile-flags:
-	@(cd modules/sndfile-flags && ./run)
-sd_sndfile-flags_clean:
-	@(cd modules/sndfile-flags && ./clean)
-
-sd_sndfile-libs:
-	@(cd modules/sndfile-libs && ./run)
-sd_sndfile-libs_clean:
-	@(cd modules/sndfile-libs && ./clean)
-
-sd_sdl-flags:
-	@(cd modules/sdl-flags && ./run)
-sd_sdl-flags_clean:
-	@(cd modules/sdl-flags && ./clean)
-
-sd_sdl-libs:
-	@(cd modules/sdl-libs && ./run)
-sd_sdl-libs_clean:
-	@(cd modules/sdl-libs && ./clean)
-
-sd_sdl-image-flags:
-	@(cd modules/sdl-image-flags && ./run)
-sd_sdl-image-flags_clean:
-	@(cd modules/sdl-image-flags && ./clean)
-
-sd_sdl-image-libs:
-	@(cd modules/sdl-image-libs && ./run)
-sd_sdl-image-libs_clean:
-	@(cd modules/sdl-image-libs && ./clean)
-
-sd_sdl-mixer-flags:
-	@(cd modules/sdl-mixer-flags && ./run)
-sd_sdl-mixer-flags_clean:
-	@(cd modules/sdl-mixer-flags && ./clean)
-
-sd_sdl-mixer-libs:
-	@(cd modules/sdl-mixer-libs && ./run)
-sd_sdl-mixer-libs_clean:
-	@(cd modules/sdl-mixer-libs && ./clean)
-
-sd_sdl-ttf-flags:
-	@(cd modules/sdl-ttf-flags && ./run)
-sd_sdl-ttf-flags_clean:
-	@(cd modules/sdl-ttf-flags && ./clean)
+sd_int64:
+	@(cd modules/int64 && ./run)
+sd_int64_clean:
+	@(cd modules/int64 && ./clean)
 
 sd_sdl-ttf-libs:
 	@(cd modules/sdl-ttf-libs && ./run)
 sd_sdl-ttf-libs_clean:
 	@(cd modules/sdl-ttf-libs && ./clean)
 
-sd_sysinfo:
-	@(cd modules/sysinfo && ./run)
-sd_sysinfo_clean:
-	@(cd modules/sysinfo && ./clean)
+sd_corelib-libs-S:
+	@(cd modules/corelib-libs-S && ./run)
+sd_corelib-libs-S_clean:
+	@(cd modules/corelib-libs-S && ./clean)
 
-sd_sse-flags:
-	@(cd modules/sse-flags && ./run)
-sd_sse-flags_clean:
-	@(cd modules/sse-flags && ./clean)
+sd_float32:
+	@(cd modules/float32 && ./run)
+sd_float32_clean:
+	@(cd modules/float32 && ./clean)
 
 sd_sse2-flags:
 	@(cd modules/sse2-flags && ./run)
@@ -284,15 +229,70 @@ sd_sse3-flags:
 sd_sse3-flags_clean:
 	@(cd modules/sse3-flags && ./clean)
 
-sd_altivec-flags:
-	@(cd modules/altivec-flags && ./run)
-sd_altivec-flags_clean:
-	@(cd modules/altivec-flags && ./clean)
+sd_fltk2-libs:
+	@(cd modules/fltk2-libs && ./run)
+sd_fltk2-libs_clean:
+	@(cd modules/fltk2-libs && ./clean)
 
-sd_fcntl:
-	@(cd modules/fcntl && ./run)
-sd_fcntl_clean:
-	@(cd modules/fcntl && ./clean)
+sd_corelib-flags:
+	@(cd modules/corelib-flags && ./run)
+sd_corelib-flags_clean:
+	@(cd modules/corelib-flags && ./clean)
+
+sd_sdl-libs:
+	@(cd modules/sdl-libs && ./run)
+sd_sdl-libs_clean:
+	@(cd modules/sdl-libs && ./clean)
+
+sd_png-libs:
+	@(cd modules/png-libs && ./run)
+sd_png-libs_clean:
+	@(cd modules/png-libs && ./clean)
+
+sd_fltk2-flags:
+	@(cd modules/fltk2-flags && ./run)
+sd_fltk2-flags_clean:
+	@(cd modules/fltk2-flags && ./clean)
+
+sd_sdl-flags:
+	@(cd modules/sdl-flags && ./run)
+sd_sdl-flags_clean:
+	@(cd modules/sdl-flags && ./clean)
+
+sd_pdcgi-libs-S:
+	@(cd modules/pdcgi-libs-S && ./run)
+sd_pdcgi-libs-S_clean:
+	@(cd modules/pdcgi-libs-S && ./clean)
+
+sd_png-flags:
+	@(cd modules/png-flags && ./run)
+sd_png-flags_clean:
+	@(cd modules/png-flags && ./clean)
+
+sd_sd-fcntl:
+	@(cd modules/sd-fcntl && ./run)
+sd_sd-fcntl_clean:
+	@(cd modules/sd-fcntl && ./clean)
+
+sd_sd-dlopen:
+	@(cd modules/sd-dlopen && ./run)
+sd_sd-dlopen_clean:
+	@(cd modules/sd-dlopen && ./clean)
+
+sd_sd-fd:
+	@(cd modules/sd-fd && ./run)
+sd_sd-fd_clean:
+	@(cd modules/sd-fd && ./clean)
+
+sd_sd-select:
+	@(cd modules/sd-select && ./run)
+sd_sd-select_clean:
+	@(cd modules/sd-select && ./clean)
+
+sd_sd-signal:
+	@(cd modules/sd-signal && ./run)
+sd_sd-signal_clean:
+	@(cd modules/sd-signal && ./clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
