--- a/SYSDEPS/Makefile
+++ b/SYSDEPS/Makefile
@@ -1,28 +1,33 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_sd-mmap sd_sd-math sd_aio-mech sd_io_poll-libs-S sd_io_poll-flags sd_fltk11-libs-S sd_sdl-image-libs sd_uint64 sd_sysinfo sd_sdl-image-flags sd_int32 sd_int16 sd_ch_flags sd_corelib-libs sd_fastcgi-libs sd_sdl-ttf-flags sd_fltk2-libs-S sd_fastcgi-flags sd_opengl-libs sd_sndfile-libs sd_opengl-flags sd_sndfile-flags sd_float64 sd_tiff-libs sd_pdcgi-flags sd_floatcast sd_altivec-flags sd_tiff-flags sd_sse-flags sd_uint32 sd_uint16 sd_fltk11-libs sd_sdl-mixer-libs sd_fltk11-flags sd_portaudio-libs sd_sdl-mixer-flags sd_jack-libs sd_byteorder sd_direntry sd_portaudio-flags sd_jack-flags sd_int64 sd_sdl-ttf-libs sd_corelib-libs-S sd_float32 sd_sse2-flags sd_sse3-flags sd_fltk2-libs sd_corelib-flags sd_sdl-libs sd_png-libs sd_fltk2-flags sd_sdl-flags sd_pdcgi-libs-S sd_png-flags sd_sd-fcntl sd_sd-dlopen sd_sd-fd sd_sd-select sd_sd-signal sd_sd-longlong sd_sd-pthreads
-sysdeps_clean:  sd_sd-mmap_clean sd_sd-math_clean sd_aio-mech_clean sd_io_poll-libs-S_clean sd_io_poll-flags_clean sd_fltk11-libs-S_clean sd_sdl-image-libs_clean sd_uint64_clean sd_sysinfo_clean sd_sdl-image-flags_clean sd_int32_clean sd_int16_clean sd_ch_flags_clean sd_corelib-libs_clean sd_fastcgi-libs_clean sd_sdl-ttf-flags_clean sd_fltk2-libs-S_clean sd_fastcgi-flags_clean sd_opengl-libs_clean sd_sndfile-libs_clean sd_opengl-flags_clean sd_sndfile-flags_clean sd_float64_clean sd_tiff-libs_clean sd_pdcgi-flags_clean sd_floatcast_clean sd_altivec-flags_clean sd_tiff-flags_clean sd_sse-flags_clean sd_uint32_clean sd_uint16_clean sd_fltk11-libs_clean sd_sdl-mixer-libs_clean sd_fltk11-flags_clean sd_portaudio-libs_clean sd_sdl-mixer-flags_clean sd_jack-libs_clean sd_byteorder_clean sd_direntry_clean sd_portaudio-flags_clean sd_jack-flags_clean sd_int64_clean sd_sdl-ttf-libs_clean sd_corelib-libs-S_clean sd_float32_clean sd_sse2-flags_clean sd_sse3-flags_clean sd_fltk2-libs_clean sd_corelib-flags_clean sd_sdl-libs_clean sd_png-libs_clean sd_fltk2-flags_clean sd_sdl-flags_clean sd_pdcgi-libs-S_clean sd_png-flags_clean sd_sd-fcntl_clean sd_sd-dlopen_clean sd_sd-fd_clean sd_sd-select_clean sd_sd-signal_clean sd_sd-longlong_clean sd_sd-pthreads_clean
+sysdeps:  sd_sd-sockets sd_aio-mech sd_sd-select sd_io_poll-libs-S sd_sd-dlopen sd_io_poll-flags sd_fltk11-libs-S sd_sdl-image-libs sd_uint64 sd_sysinfo sd_sdl-image-flags sd_sd-fd sd_sd-math sd_int32 sd_int16 sd_ch_flags sd_corelib-libs sd_fastcgi-libs sd_sdl-ttf-flags sd_fltk2-libs-S sd_fastcgi-flags sd_opengl-libs sd_float64 sd_sndfile-libs sd_opengl-flags sd_sndfile-flags sd_tiff-libs sd_pdcgi-flags sd_floatcast sd_altivec-flags sd_sd-signal sd_tiff-flags sd_sd-longlong sd_sse-flags sd_uint32 sd_uint16 sd_fltk11-libs sd_sdl-mixer-libs sd_fltk11-flags sd_portaudio-libs sd_sd-mmap sd_sdl-mixer-flags sd_jack-libs sd_byteorder sd_direntry sd_portaudio-flags sd_jack-flags sd_int64 sd_sdl-ttf-libs sd_corelib-libs-S sd_sse2-flags sd_sse3-flags sd_fltk2-libs sd_corelib-flags sd_sdl-libs sd_float32 sd_sd-fcntl sd_png-libs sd_fltk2-flags sd_sdl-flags sd_pdcgi-libs-S sd_png-flags sd_sd-pthreads sd_vector-flags sd_vector-libs sd_vector-libs-S
+sysdeps_clean:  sd_sd-sockets_clean sd_aio-mech_clean sd_sd-select_clean sd_io_poll-libs-S_clean sd_sd-dlopen_clean sd_io_poll-flags_clean sd_fltk11-libs-S_clean sd_sdl-image-libs_clean sd_uint64_clean sd_sysinfo_clean sd_sdl-image-flags_clean sd_sd-fd_clean sd_sd-math_clean sd_int32_clean sd_int16_clean sd_ch_flags_clean sd_corelib-libs_clean sd_fastcgi-libs_clean sd_sdl-ttf-flags_clean sd_fltk2-libs-S_clean sd_fastcgi-flags_clean sd_opengl-libs_clean sd_float64_clean sd_sndfile-libs_clean sd_opengl-flags_clean sd_sndfile-flags_clean sd_tiff-libs_clean sd_pdcgi-flags_clean sd_floatcast_clean sd_altivec-flags_clean sd_sd-signal_clean sd_tiff-flags_clean sd_sd-longlong_clean sd_sse-flags_clean sd_uint32_clean sd_uint16_clean sd_fltk11-libs_clean sd_sdl-mixer-libs_clean sd_fltk11-flags_clean sd_portaudio-libs_clean sd_sd-mmap_clean sd_sdl-mixer-flags_clean sd_jack-libs_clean sd_byteorder_clean sd_direntry_clean sd_portaudio-flags_clean sd_jack-flags_clean sd_int64_clean sd_sdl-ttf-libs_clean sd_corelib-libs-S_clean sd_sse2-flags_clean sd_sse3-flags_clean sd_fltk2-libs_clean sd_corelib-flags_clean sd_sdl-libs_clean sd_float32_clean sd_sd-fcntl_clean sd_png-libs_clean sd_fltk2-flags_clean sd_sdl-flags_clean sd_pdcgi-libs-S_clean sd_png-flags_clean sd_sd-pthreads_clean sd_vector-flags_clean sd_vector-libs_clean sd_vector-libs-S_clean
 
-sd_sd-mmap:
-	@(cd modules/sd-mmap && ./run)
-sd_sd-mmap_clean:
-	@(cd modules/sd-mmap && ./clean)
-
-sd_sd-math:
-	@(cd modules/sd-math && ./run)
-sd_sd-math_clean:
-	@(cd modules/sd-math && ./clean)
+sd_sd-sockets:
+	@(cd modules/sd-sockets && ./run)
+sd_sd-sockets_clean:
+	@(cd modules/sd-sockets && ./clean)
 
 sd_aio-mech:
 	@(cd modules/aio-mech && ./run)
 sd_aio-mech_clean:
 	@(cd modules/aio-mech && ./clean)
 
+sd_sd-select:
+	@(cd modules/sd-select && ./run)
+sd_sd-select_clean:
+	@(cd modules/sd-select && ./clean)
+
 sd_io_poll-libs-S:
 	@(cd modules/io_poll-libs-S && ./run)
 sd_io_poll-libs-S_clean:
 	@(cd modules/io_poll-libs-S && ./clean)
+
+sd_sd-dlopen:
+	@(cd modules/sd-dlopen && ./run)
+sd_sd-dlopen_clean:
+	@(cd modules/sd-dlopen && ./clean)
 
 sd_io_poll-flags:
 	@(cd modules/io_poll-flags && ./run)
@@ -53,6 +58,16 @@ sd_sdl-image-flags:
 	@(cd modules/sdl-image-flags && ./run)
 sd_sdl-image-flags_clean:
 	@(cd modules/sdl-image-flags && ./clean)
+
+sd_sd-fd:
+	@(cd modules/sd-fd && ./run)
+sd_sd-fd_clean:
+	@(cd modules/sd-fd && ./clean)
+
+sd_sd-math:
+	@(cd modules/sd-math && ./run)
+sd_sd-math_clean:
+	@(cd modules/sd-math && ./clean)
 
 sd_int32:
 	@(cd modules/int32 && ./run)
@@ -99,6 +114,11 @@ sd_opengl-libs:
 sd_opengl-libs_clean:
 	@(cd modules/opengl-libs && ./clean)
 
+sd_float64:
+	@(cd modules/float64 && ./run)
+sd_float64_clean:
+	@(cd modules/float64 && ./clean)
+
 sd_sndfile-libs:
 	@(cd modules/sndfile-libs && ./run)
 sd_sndfile-libs_clean:
@@ -113,11 +133,6 @@ sd_sndfile-flags:
 	@(cd modules/sndfile-flags && ./run)
 sd_sndfile-flags_clean:
 	@(cd modules/sndfile-flags && ./clean)
-
-sd_float64:
-	@(cd modules/float64 && ./run)
-sd_float64_clean:
-	@(cd modules/float64 && ./clean)
 
 sd_tiff-libs:
 	@(cd modules/tiff-libs && ./run)
@@ -139,10 +154,20 @@ sd_altivec-flags:
 sd_altivec-flags_clean:
 	@(cd modules/altivec-flags && ./clean)
 
+sd_sd-signal:
+	@(cd modules/sd-signal && ./run)
+sd_sd-signal_clean:
+	@(cd modules/sd-signal && ./clean)
+
 sd_tiff-flags:
 	@(cd modules/tiff-flags && ./run)
 sd_tiff-flags_clean:
 	@(cd modules/tiff-flags && ./clean)
+
+sd_sd-longlong:
+	@(cd modules/sd-longlong && ./run)
+sd_sd-longlong_clean:
+	@(cd modules/sd-longlong && ./clean)
 
 sd_sse-flags:
 	@(cd modules/sse-flags && ./run)
@@ -178,6 +203,11 @@ sd_portaudio-libs:
 	@(cd modules/portaudio-libs && ./run)
 sd_portaudio-libs_clean:
 	@(cd modules/portaudio-libs && ./clean)
+
+sd_sd-mmap:
+	@(cd modules/sd-mmap && ./run)
+sd_sd-mmap_clean:
+	@(cd modules/sd-mmap && ./clean)
 
 sd_sdl-mixer-flags:
 	@(cd modules/sdl-mixer-flags && ./run)
@@ -224,11 +254,6 @@ sd_corelib-libs-S:
 sd_corelib-libs-S_clean:
 	@(cd modules/corelib-libs-S && ./clean)
 
-sd_float32:
-	@(cd modules/float32 && ./run)
-sd_float32_clean:
-	@(cd modules/float32 && ./clean)
-
 sd_sse2-flags:
 	@(cd modules/sse2-flags && ./run)
 sd_sse2-flags_clean:
@@ -253,6 +278,16 @@ sd_sdl-libs:
 	@(cd modules/sdl-libs && ./run)
 sd_sdl-libs_clean:
 	@(cd modules/sdl-libs && ./clean)
+
+sd_float32:
+	@(cd modules/float32 && ./run)
+sd_float32_clean:
+	@(cd modules/float32 && ./clean)
+
+sd_sd-fcntl:
+	@(cd modules/sd-fcntl && ./run)
+sd_sd-fcntl_clean:
+	@(cd modules/sd-fcntl && ./clean)
 
 sd_png-libs:
 	@(cd modules/png-libs && ./run)
@@ -279,40 +314,25 @@ sd_png-flags:
 sd_png-flags_clean:
 	@(cd modules/png-flags && ./clean)
 
-sd_sd-fcntl:
-	@(cd modules/sd-fcntl && ./run)
-sd_sd-fcntl_clean:
-	@(cd modules/sd-fcntl && ./clean)
-
-sd_sd-dlopen:
-	@(cd modules/sd-dlopen && ./run)
-sd_sd-dlopen_clean:
-	@(cd modules/sd-dlopen && ./clean)
-
-sd_sd-fd:
-	@(cd modules/sd-fd && ./run)
-sd_sd-fd_clean:
-	@(cd modules/sd-fd && ./clean)
-
-sd_sd-select:
-	@(cd modules/sd-select && ./run)
-sd_sd-select_clean:
-	@(cd modules/sd-select && ./clean)
-
-sd_sd-signal:
-	@(cd modules/sd-signal && ./run)
-sd_sd-signal_clean:
-	@(cd modules/sd-signal && ./clean)
-
-sd_sd-longlong:
-	@(cd modules/sd-longlong && ./run)
-sd_sd-longlong_clean:
-	@(cd modules/sd-longlong && ./clean)
-
 sd_sd-pthreads:
 	@(cd modules/sd-pthreads && ./run)
 sd_sd-pthreads_clean:
 	@(cd modules/sd-pthreads && ./clean)
+
+sd_vector-flags:
+	@(cd modules/vector-flags && ./run)
+sd_vector-flags_clean:
+	@(cd modules/vector-flags && ./clean)
+
+sd_vector-libs:
+	@(cd modules/vector-libs && ./run)
+sd_vector-libs_clean:
+	@(cd modules/vector-libs && ./clean)
+
+sd_vector-libs-S:
+	@(cd modules/vector-libs-S && ./run)
+sd_vector-libs-S_clean:
+	@(cd modules/vector-libs-S && ./clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
